feat: refactor Product module
